[gd_scene load_steps=12 format=4 uid="uid://cg5i6xjkeb08k"]

[ext_resource type="TileSet" uid="uid://sq2wt61uq0l7" path="res://tileset.tres" id="1_g2hva"]
[ext_resource type="Script" path="res://world.gd" id="1_of0qu"]
[ext_resource type="PackedScene" uid="uid://cdh4jfugrv74d" path="res://tank.tscn" id="2_ycjae"]
[ext_resource type="PackedScene" uid="uid://io1spilb4pl4" path="res://tank_mirrored.tscn" id="3_v3wg7"]
[ext_resource type="PackedScene" uid="uid://bunj54mp6x87n" path="res://barrel.tscn" id="5_co81j"]
[ext_resource type="FontFile" uid="uid://bnvh5pxawm7hh" path="res://assets/Kenney Bold.ttf" id="6_vxoo7"]
[ext_resource type="Script" path="res://water.gd" id="6_w6pv2"]
[ext_resource type="PackedScene" uid="uid://bmmpllfs77v31" path="res://player_stats.tscn" id="7_s5p6o"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ufhjm"]
distance = -653.0

[sub_resource type="LabelSettings" id="LabelSettings_46vy5"]
line_spacing = 12.0
font = ExtResource("6_vxoo7")
font_size = 64
outline_size = 8
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_hjutv"]
font = ExtResource("6_vxoo7")
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="World" type="Node2D"]
script = ExtResource("1_of0qu")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -100)
limit_bottom = 850

[node name="Terrain" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAQAAAACAAkAAAABAAQAAAACAAkAAAACAAQAAAACAAkAAAADAAQAAAAGAAsAAAAEAAQAAAAAAAkAAAAFAAQAAAAAAAkAAAAGAAQAAAACAAsAAAAHAAQAAAACAAkAAAAIAAQAAAACAAkAAAAJAAQAAAACAAkAAAAKAAQAAAABAAsAAAALAAQAAAAAAAkAAAAMAAQAAAAAAAkAAAANAAQAAAAAAAkAAAAOAAQAAAAAAAkAAAACAAMAAAACAAkAAAADAAMAAAACAAkAAAAEAAMAAAACAAkAAAAFAAMAAAACAAkAAAABAAMAAAACAAsAAAABAAIAAAACAAoAAAAAAAIAAAACAAkAAAAAAAMAAAAAAAkAAAAGAAMAAAACAAoAAAAKAAMAAAABAAoAAAALAAMAAAACAAkAAAAMAAIAAAABAAoAAAAMAAMAAAABAAsAAAANAAIAAAACAAkAAAAOAAIAAAACAAkAAAAPAAIAAAACAAkAAAANAAMAAAAAAAkAAAAOAAMAAAAAAAkAAAAPAAMAAAAFAAsAAAAPAAQAAAAAAAkAAAAAAAUAAAAAAAkAAAABAAUAAAAAAAkAAAACAAUAAAAAAAkAAAADAAUAAAAAAAkAAAAEAAUAAAAAAAkAAAAFAAUAAAAAAAkAAAAGAAUAAAAAAAkAAAAHAAUAAAAAAAkAAAAIAAUAAAAAAAkAAAAJAAUAAAAAAAkAAAAKAAUAAAAAAAkAAAALAAUAAAAAAAkAAAAMAAUAAAAAAAkAAAANAAUAAAAAAAkAAAAOAAUAAAAAAAkAAAAPAAUAAAAAAAkAAAD9/wIAAAABAAoAAAD+/wIAAAACAAkAAAD//wIAAAACAAkAAAD+/wMAAAAAAAkAAAD+/wQAAAAAAAkAAAD//wQAAAAFAAsAAAD//wMAAAAAAAkAAAD+/wUAAAAAAAkAAAD//wUAAAAAAAkAAAD6/wQAAAACAAkAAAD9/wMAAAABAAsAAAD8/wMAAAABAAoAAAD8/wQAAAABAAsAAAD7/wQAAAACAAkAAAD6/wUAAAAAAAkAAAD7/wUAAAAAAAkAAAD8/wUAAAAAAAkAAAD9/wUAAAAAAAkAAAD9/wQAAAAAAAkAAAD5/wQAAAACAAkAAAD4/wQAAAACAAkAAAD3/wQAAAABAAkAAAD3/wUAAAAAAAkAAAD4/wUAAAAAAAkAAAD5/wUAAAAAAAkAAAAQAAIAAAAEAAoAAAAQAAMAAAACAAkAAAAQAAQAAAAAAAkAAAAQAAUAAAAAAAkAAAARAAMAAAACAAkAAAARAAQAAAAAAAkAAAARAAUAAAAAAAkAAAASAAUAAAAAAAkAAAATAAUAAAAAAAkAAAASAAQAAAAAAAkAAAATAAQAAAAAAAkAAAASAAMAAAACAAkAAAATAAMAAAACAAkAAAAUAAMAAAACAAkAAAAVAAMAAAACAAkAAAAWAAMAAAAEAAoAAAAWAAQAAAAEAAsAAAAXAAQAAAACAAkAAAAYAAQAAAACAAoAAAAYAAUAAAACAAsAAAAZAAUAAAACAAkAAAAaAAUAAAACAAkAAAAbAAUAAAACAAkAAAAcAAQAAAABAAoAAAAcAAUAAAABAAsAAAAUAAQAAAAAAAkAAAAVAAQAAAAAAAkAAAAVAAUAAAAAAAkAAAAUAAUAAAAAAAkAAAAWAAUAAAAAAAkAAAAXAAUAAAAAAAkAAAAdAAQAAAACAAkAAAAeAAQAAAACAAkAAAAfAAMAAAABAAoAAAAfAAQAAAACAAkAAAAgAAIAAAABAAoAAAAgAAMAAAABAAsAAAAhAAIAAAACAAkAAAAiAAIAAAACAAkAAAAjAAIAAAACAAkAAAAkAAIAAAAEAAoAAAAkAAMAAAAEAAsAAAAlAAMAAAACAAkAAAAlAAQAAAAAAAkAAAAmAAQAAAAAAAkAAAAdAAUAAAAAAAkAAAAeAAUAAAAAAAkAAAAfAAUAAAAAAAkAAAAgAAUAAAAAAAkAAAAhAAUAAAAAAAkAAAAiAAUAAAAAAAkAAAAjAAUAAAAAAAkAAAAkAAUAAAAAAAkAAAAlAAUAAAAAAAkAAAAmAAUAAAAAAAkAAAAkAAQAAAAAAAkAAAAjAAQAAAAAAAkAAAAiAAQAAAAAAAkAAAAhAAQAAAAGAAsAAAAgAAQAAAACAAkAAAAhAAMAAAAAAAkAAAAiAAMAAAAAAAkAAAAjAAMAAAAAAAkAAAAmAAMAAAADAAkAAAA=")
tile_set = ExtResource("1_g2hva")

[node name="Units" type="Node2D" parent="."]

[node name="Tank1" parent="Units" instance=ExtResource("2_ycjae")]
position = Vector2(1087, 285)
drive_left_action = "player1_left"
drive_right_action = "player1_right"
turret_up_action = "player1_up"
turret_down_action = "player1_down"
fire_action = "player1_fire"

[node name="Tank2" parent="Units" instance=ExtResource("3_v3wg7")]
position = Vector2(3879, 285)
drive_left_action = "player2_left"
drive_right_action = "player2_right"
turret_up_action = "player2_down"
turret_down_action = "player2_up"
fire_action = "player2_fire"
turret_min_angle = 0.0
turrent_max_angle = 60.0

[node name="Barrel" parent="Units" instance=ExtResource("5_co81j")]
position = Vector2(-694, 464)

[node name="Barrel2" parent="Units" instance=ExtResource("5_co81j")]
position = Vector2(-613, 464)

[node name="Barrel3" parent="Units" instance=ExtResource("5_co81j")]
position = Vector2(-652, 369)

[node name="Barrel4" parent="Units" instance=ExtResource("5_co81j")]
position = Vector2(-516, 452)
rotation = 0.964177

[node name="Barrel5" parent="Units" instance=ExtResource("5_co81j")]
position = Vector2(2205, 334)
rotation = 1.85956

[node name="Barrel6" parent="Units" instance=ExtResource("5_co81j")]
position = Vector2(4863, 334)

[node name="Barrel7" parent="Units" instance=ExtResource("5_co81j")]
position = Vector2(2299, 336)

[node name="Barrel8" parent="Units" instance=ExtResource("5_co81j")]
position = Vector2(3004, 472)
rotation = 1.5708

[node name="Foreground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD//wUAAAAMAAoAAAD//wYAAAAMAAsAAAAAAAUAAAAMAAoAAAAAAAYAAAAMAAsAAAABAAUAAAAMAAoAAAABAAYAAAAMAAsAAAACAAUAAAAMAAoAAAACAAYAAAAMAAsAAAADAAUAAAAMAAoAAAADAAYAAAAMAAsAAAAEAAUAAAAMAAoAAAAEAAYAAAAMAAsAAAAFAAUAAAAMAAoAAAAFAAYAAAAMAAsAAAAGAAUAAAAMAAoAAAAGAAYAAAAMAAsAAAAHAAUAAAAMAAoAAAAHAAYAAAAMAAsAAAAIAAUAAAAMAAoAAAAIAAYAAAAMAAsAAAAJAAUAAAAMAAoAAAAJAAYAAAAMAAsAAAAKAAUAAAAMAAoAAAAKAAYAAAAMAAsAAAALAAUAAAAMAAoAAAALAAYAAAAMAAsAAAAMAAUAAAAMAAoAAAAMAAYAAAAMAAsAAAANAAUAAAAMAAoAAAANAAYAAAAMAAsAAAAOAAUAAAAMAAoAAAAOAAYAAAAMAAsAAAAPAAUAAAAMAAoAAAAPAAYAAAAMAAsAAAAQAAUAAAAMAAoAAAAQAAYAAAAMAAsAAAD//wcAAAAMAAsAAAD//wgAAAAMAAsAAAD//wkAAAAMAAsAAAAAAAcAAAAMAAsAAAAAAAgAAAAMAAsAAAAAAAkAAAAMAAsAAAABAAcAAAAMAAsAAAABAAgAAAAMAAsAAAABAAkAAAAMAAsAAAACAAcAAAAMAAsAAAACAAgAAAAMAAsAAAACAAkAAAAMAAsAAAADAAcAAAAMAAsAAAADAAgAAAAMAAsAAAADAAkAAAAMAAsAAAAEAAcAAAAMAAsAAAAEAAgAAAAMAAsAAAAEAAkAAAAMAAsAAAAFAAcAAAAMAAsAAAAFAAgAAAAMAAsAAAAFAAkAAAAMAAsAAAAGAAcAAAAMAAsAAAAGAAgAAAAMAAsAAAAGAAkAAAAMAAsAAAAHAAcAAAAMAAsAAAAHAAgAAAAMAAsAAAAHAAkAAAAMAAsAAAAIAAcAAAAMAAsAAAAIAAgAAAAMAAsAAAAIAAkAAAAMAAsAAAAJAAcAAAAMAAsAAAAJAAgAAAAMAAsAAAAJAAkAAAAMAAsAAAAKAAcAAAAMAAsAAAAKAAgAAAAMAAsAAAAKAAkAAAAMAAsAAAALAAcAAAAMAAsAAAALAAgAAAAMAAsAAAALAAkAAAAMAAsAAAAMAAcAAAAMAAsAAAAMAAgAAAAMAAsAAAAMAAkAAAAMAAsAAAANAAcAAAAMAAsAAAANAAgAAAAMAAsAAAANAAkAAAAMAAsAAAAOAAcAAAAMAAsAAAAOAAgAAAAMAAsAAAAOAAkAAAAMAAsAAAAPAAcAAAAMAAsAAAAPAAgAAAAMAAsAAAAPAAkAAAAMAAsAAAAQAAcAAAAMAAsAAAAQAAgAAAAMAAsAAAAQAAkAAAAMAAsAAAD1/wUAAAAMAAoAAAD1/wYAAAAMAAsAAAD2/wUAAAAMAAoAAAD2/wYAAAAMAAsAAAD3/wUAAAAMAAoAAAD3/wYAAAAMAAsAAAD4/wUAAAAMAAoAAAD4/wYAAAAMAAsAAAD5/wUAAAAMAAoAAAD5/wYAAAAMAAsAAAD6/wUAAAAMAAoAAAD6/wYAAAAMAAsAAAD7/wUAAAAMAAoAAAD7/wYAAAAMAAsAAAD8/wUAAAAMAAoAAAD8/wYAAAAMAAsAAAD9/wUAAAAMAAoAAAD9/wYAAAAMAAsAAAD+/wUAAAAMAAoAAAD+/wYAAAAMAAsAAAARAAUAAAAMAAoAAAARAAYAAAAMAAsAAAASAAUAAAAMAAoAAAASAAYAAAAMAAsAAAATAAUAAAAMAAoAAAATAAYAAAAMAAsAAAAUAAUAAAAMAAoAAAAUAAYAAAAMAAsAAAAVAAUAAAAMAAoAAAAVAAYAAAAMAAsAAAAWAAUAAAAMAAoAAAAWAAYAAAAMAAsAAAAXAAUAAAAMAAoAAAAXAAYAAAAMAAsAAAAYAAUAAAAMAAoAAAAYAAYAAAAMAAsAAAAZAAUAAAAMAAoAAAAZAAYAAAAMAAsAAAAaAAUAAAAMAAoAAAAaAAYAAAAMAAsAAAAbAAUAAAAMAAoAAAAbAAYAAAAMAAsAAAAcAAYAAAAMAAsAAAD1/wcAAAAMAAsAAAD1/wgAAAAMAAsAAAD1/wkAAAAMAAsAAAD1/woAAAAMAAsAAAD2/wcAAAAMAAsAAAD2/wgAAAAMAAsAAAD2/wkAAAAMAAsAAAD2/woAAAAMAAsAAAD3/wcAAAAMAAsAAAD3/wgAAAAMAAsAAAD3/wkAAAAMAAsAAAD3/woAAAAMAAsAAAD4/wcAAAAMAAsAAAD4/wgAAAAMAAsAAAD4/wkAAAAMAAsAAAD4/woAAAAMAAsAAAD5/wcAAAAMAAsAAAD5/wgAAAAMAAsAAAD5/wkAAAAMAAsAAAD5/woAAAAMAAsAAAD6/wcAAAAMAAsAAAD6/wgAAAAMAAsAAAD6/wkAAAAMAAsAAAD6/woAAAAMAAsAAAD7/wcAAAAMAAsAAAD7/wgAAAAMAAsAAAD7/wkAAAAMAAsAAAD7/woAAAAMAAsAAAD8/wcAAAAMAAsAAAD8/wgAAAAMAAsAAAD8/wkAAAAMAAsAAAD8/woAAAAMAAsAAAD9/wcAAAAMAAsAAAD9/wgAAAAMAAsAAAD9/wkAAAAMAAsAAAD9/woAAAAMAAsAAAD+/wcAAAAMAAsAAAD+/wgAAAAMAAsAAAD+/wkAAAAMAAsAAAD+/woAAAAMAAsAAAD//woAAAAMAAsAAAAAAAoAAAAMAAsAAAABAAoAAAAMAAsAAAACAAoAAAAMAAsAAAADAAoAAAAMAAsAAAAEAAoAAAAMAAsAAAAFAAoAAAAMAAsAAAAGAAoAAAAMAAsAAAAHAAoAAAAMAAsAAAAIAAoAAAAMAAsAAAAJAAoAAAAMAAsAAAAKAAoAAAAMAAsAAAALAAoAAAAMAAsAAAAMAAoAAAAMAAsAAAANAAoAAAAMAAsAAAAOAAoAAAAMAAsAAAAPAAoAAAAMAAsAAAAQAAoAAAAMAAsAAAARAAcAAAAMAAsAAAARAAgAAAAMAAsAAAARAAkAAAAMAAsAAAARAAoAAAAMAAsAAAASAAcAAAAMAAsAAAASAAgAAAAMAAsAAAASAAkAAAAMAAsAAAASAAoAAAAMAAsAAAATAAcAAAAMAAsAAAATAAgAAAAMAAsAAAATAAkAAAAMAAsAAAATAAoAAAAMAAsAAAAUAAcAAAAMAAsAAAAUAAgAAAAMAAsAAAAUAAkAAAAMAAsAAAAUAAoAAAAMAAsAAAAVAAcAAAAMAAsAAAAVAAgAAAAMAAsAAAAVAAkAAAAMAAsAAAAVAAoAAAAMAAsAAAAWAAcAAAAMAAsAAAAWAAgAAAAMAAsAAAAWAAkAAAAMAAsAAAAWAAoAAAAMAAsAAAAXAAcAAAAMAAsAAAAXAAgAAAAMAAsAAAAXAAkAAAAMAAsAAAAXAAoAAAAMAAsAAAAYAAcAAAAMAAsAAAAYAAgAAAAMAAsAAAAYAAkAAAAMAAsAAAAYAAoAAAAMAAsAAAAZAAcAAAAMAAsAAAAZAAgAAAAMAAsAAAAZAAkAAAAMAAsAAAAZAAoAAAAMAAsAAAAaAAcAAAAMAAsAAAAaAAgAAAAMAAsAAAAaAAkAAAAMAAsAAAAaAAoAAAAMAAsAAAAbAAcAAAAMAAsAAAAbAAgAAAAMAAsAAAAbAAkAAAAMAAsAAAAbAAoAAAAMAAsAAAAcAAcAAAAMAAsAAAAcAAgAAAAMAAsAAAAcAAkAAAAMAAsAAAAcAAoAAAAMAAsAAAD5/wMAAAAKAAkAAAD6/wMAAAALAAkAAAD4/wMAAAAKAAgAAAD3/wMAAAALAAgAAAAAAAMAAAALAAIAAAADAAMAAAAKAAMAAAAQAAIAAAAKAAMAAAALAAIAAAAJAAIAAAD+/wEAAAALAAMAAAAJAAMAAAAUAAIAAAAJAAIAAAATAAEAAADo/wUAAAAMAAoAAADo/wYAAAAMAAsAAADp/wUAAAAMAAoAAADp/wYAAAAMAAsAAADq/wUAAAAMAAoAAADq/wYAAAAMAAsAAADr/wUAAAAMAAoAAADr/wYAAAAMAAsAAADs/wUAAAAMAAoAAADs/wYAAAAMAAsAAADt/wUAAAAMAAoAAADt/wYAAAAMAAsAAADu/wUAAAAMAAoAAADu/wYAAAAMAAsAAADv/wUAAAAMAAoAAADv/wYAAAAMAAsAAADw/wUAAAAMAAoAAADw/wYAAAAMAAsAAADx/wUAAAAMAAoAAADx/wYAAAAMAAsAAADy/wUAAAAMAAoAAADy/wYAAAAMAAsAAADz/wUAAAAMAAoAAADz/wYAAAAMAAsAAAD0/wUAAAAMAAoAAAD0/wYAAAAMAAsAAADn/wYAAAAMAAsAAADn/wcAAAAMAAsAAADn/wgAAAAMAAsAAADn/wkAAAAMAAsAAADn/woAAAAMAAsAAADo/wcAAAAMAAsAAADo/wgAAAAMAAsAAADo/wkAAAAMAAsAAADo/woAAAAMAAsAAADp/wcAAAAMAAsAAADp/wgAAAAMAAsAAADp/wkAAAAMAAsAAADp/woAAAAMAAsAAADq/wcAAAAMAAsAAADq/wgAAAAMAAsAAADq/wkAAAAMAAsAAADq/woAAAAMAAsAAADr/wcAAAAMAAsAAADr/wgAAAAMAAsAAADr/wkAAAAMAAsAAADr/woAAAAMAAsAAADs/wcAAAAMAAsAAADs/wgAAAAMAAsAAADs/wkAAAAMAAsAAADs/woAAAAMAAsAAADt/wcAAAAMAAsAAADt/wgAAAAMAAsAAADt/wkAAAAMAAsAAADt/woAAAAMAAsAAADu/wcAAAAMAAsAAADu/wgAAAAMAAsAAADu/wkAAAAMAAsAAADu/woAAAAMAAsAAADv/wcAAAAMAAsAAADv/wgAAAAMAAsAAADv/wkAAAAMAAsAAADv/woAAAAMAAsAAADw/wcAAAAMAAsAAADw/wgAAAAMAAsAAADw/wkAAAAMAAsAAADw/woAAAAMAAsAAADx/wcAAAAMAAsAAADx/wgAAAAMAAsAAADx/wkAAAAMAAsAAADx/woAAAAMAAsAAADy/wcAAAAMAAsAAADy/wgAAAAMAAsAAADy/wkAAAAMAAsAAADy/woAAAAMAAsAAADz/wcAAAAMAAsAAADz/wgAAAAMAAsAAADz/wkAAAAMAAsAAADz/woAAAAMAAsAAAD0/wcAAAAMAAsAAAD0/wgAAAAMAAsAAAD0/wkAAAAMAAsAAAD0/woAAAAMAAsAAADn/wUAAAAMAAoAAAAdAAUAAAAMAAoAAAAdAAYAAAAMAAsAAAAeAAUAAAAMAAoAAAAeAAYAAAAMAAsAAAAfAAUAAAAMAAoAAAAfAAYAAAAMAAsAAAAgAAUAAAAMAAoAAAAgAAYAAAAMAAsAAAAhAAUAAAAMAAoAAAAhAAYAAAAMAAsAAAAiAAUAAAAMAAoAAAAiAAYAAAAMAAsAAAAjAAUAAAAMAAoAAAAjAAYAAAAMAAsAAAAkAAUAAAAMAAoAAAAkAAYAAAAMAAsAAAAlAAUAAAAMAAoAAAAlAAYAAAAMAAsAAAAmAAUAAAAMAAoAAAAmAAYAAAAMAAsAAAAnAAUAAAAMAAoAAAAnAAYAAAAMAAsAAAAoAAUAAAAMAAoAAAAoAAYAAAAMAAsAAAApAAUAAAAMAAoAAAApAAYAAAAMAAsAAAAqAAUAAAAMAAoAAAAqAAYAAAAMAAsAAAArAAUAAAAMAAoAAAArAAYAAAAMAAsAAAAsAAUAAAAMAAoAAAAsAAYAAAAMAAsAAAAtAAUAAAAMAAoAAAAtAAYAAAAMAAsAAAAuAAUAAAAMAAoAAAAuAAYAAAAMAAsAAAAvAAUAAAAMAAoAAAAvAAYAAAAMAAsAAAAwAAUAAAAMAAoAAAAwAAYAAAAMAAsAAAAxAAUAAAAMAAoAAAAxAAYAAAAMAAsAAAAdAAcAAAAMAAsAAAAdAAgAAAAMAAsAAAAdAAkAAAAMAAsAAAAdAAoAAAAMAAsAAAAeAAcAAAAMAAsAAAAeAAgAAAAMAAsAAAAeAAkAAAAMAAsAAAAeAAoAAAAMAAsAAAAfAAcAAAAMAAsAAAAfAAgAAAAMAAsAAAAfAAkAAAAMAAsAAAAfAAoAAAAMAAsAAAAgAAcAAAAMAAsAAAAgAAgAAAAMAAsAAAAgAAkAAAAMAAsAAAAgAAoAAAAMAAsAAAAhAAcAAAAMAAsAAAAhAAgAAAAMAAsAAAAhAAkAAAAMAAsAAAAhAAoAAAAMAAsAAAAiAAcAAAAMAAsAAAAiAAgAAAAMAAsAAAAiAAkAAAAMAAsAAAAiAAoAAAAMAAsAAAAjAAcAAAAMAAsAAAAjAAgAAAAMAAsAAAAjAAkAAAAMAAsAAAAjAAoAAAAMAAsAAAAkAAcAAAAMAAsAAAAkAAgAAAAMAAsAAAAkAAkAAAAMAAsAAAAkAAoAAAAMAAsAAAAlAAcAAAAMAAsAAAAlAAgAAAAMAAsAAAAlAAkAAAAMAAsAAAAlAAoAAAAMAAsAAAAmAAcAAAAMAAsAAAAmAAgAAAAMAAsAAAAmAAkAAAAMAAsAAAAmAAoAAAAMAAsAAAAnAAcAAAAMAAsAAAAnAAgAAAAMAAsAAAAnAAkAAAAMAAsAAAAnAAoAAAAMAAsAAAAoAAcAAAAMAAsAAAAoAAgAAAAMAAsAAAAoAAkAAAAMAAsAAAAoAAoAAAAMAAsAAAApAAcAAAAMAAsAAAApAAgAAAAMAAsAAAApAAkAAAAMAAsAAAApAAoAAAAMAAsAAAAqAAcAAAAMAAsAAAAqAAgAAAAMAAsAAAAqAAkAAAAMAAsAAAAqAAoAAAAMAAsAAAArAAcAAAAMAAsAAAArAAgAAAAMAAsAAAArAAkAAAAMAAsAAAArAAoAAAAMAAsAAAAsAAcAAAAMAAsAAAAsAAgAAAAMAAsAAAAsAAkAAAAMAAsAAAAsAAoAAAAMAAsAAAAtAAcAAAAMAAsAAAAtAAgAAAAMAAsAAAAtAAkAAAAMAAsAAAAtAAoAAAAMAAsAAAAuAAcAAAAMAAsAAAAuAAgAAAAMAAsAAAAuAAkAAAAMAAsAAAAuAAoAAAAMAAsAAAAvAAcAAAAMAAsAAAAvAAgAAAAMAAsAAAAvAAkAAAAMAAsAAAAvAAoAAAAMAAsAAAAwAAcAAAAMAAsAAAAwAAgAAAAMAAsAAAAwAAkAAAAMAAsAAAAwAAoAAAAMAAsAAAAxAAcAAAAMAAsAAAAxAAgAAAAMAAsAAAAxAAkAAAAMAAsAAAAxAAoAAAAMAAsAAAAOAAEAAAAKAAkAAAANAAEAAAAJAAkAAAAPAAEAAAALAAkAAAAhAAMAAAALAAMAAAAcAAUAAAAMAAoAAAAZAAQAAAAKAAMAAAAbAAQAAAATAAIAAAAbAAMAAAARAAEAAAAjAAEAAAAJAAMAAAAUAAIAAAALAAgAAAASAAIAAAAKAAgAAAATAAIAAAAKAAkAAAAmAAIAAAALAAgAAAAyAAUAAAAMAAoAAAAyAAYAAAAMAAsAAAAyAAcAAAAMAAsAAAAyAAgAAAAMAAsAAAAyAAkAAAAMAAsAAAAyAAoAAAAMAAsAAAAzAAUAAAAMAAoAAAAzAAYAAAAMAAsAAAAzAAcAAAAMAAsAAAAzAAgAAAAMAAsAAAAzAAkAAAAMAAsAAAAzAAoAAAAMAAsAAAA0AAUAAAAMAAoAAAA0AAYAAAAMAAsAAAA0AAcAAAAMAAsAAAA0AAgAAAAMAAsAAAA0AAkAAAAMAAsAAAA0AAoAAAAMAAsAAAA1AAUAAAAMAAoAAAA1AAYAAAAMAAsAAAA1AAcAAAAMAAsAAAA1AAgAAAAMAAsAAAA1AAkAAAAMAAsAAAA1AAoAAAAMAAsAAAA2AAUAAAAMAAoAAAA2AAYAAAAMAAsAAAA2AAcAAAAMAAsAAAA2AAgAAAAMAAsAAAA2AAkAAAAMAAsAAAA2AAoAAAAMAAsAAAA3AAUAAAAMAAoAAAA3AAYAAAAMAAsAAAA3AAcAAAAMAAsAAAA3AAgAAAAMAAsAAAA3AAkAAAAMAAsAAAA3AAoAAAAMAAsAAAA4AAUAAAAMAAoAAAA4AAYAAAAMAAsAAAA4AAcAAAAMAAsAAAA4AAgAAAAMAAsAAAA4AAkAAAAMAAsAAAA4AAoAAAAMAAsAAAA5AAUAAAAMAAoAAAA5AAYAAAAMAAsAAAA5AAcAAAAMAAsAAAA5AAgAAAAMAAsAAAA5AAkAAAAMAAsAAAA5AAoAAAAMAAsAAAA6AAUAAAAMAAoAAAA6AAYAAAAMAAsAAAA6AAcAAAAMAAsAAAA6AAgAAAAMAAsAAAA6AAkAAAAMAAsAAAA6AAoAAAAMAAsAAAA7AAUAAAAMAAoAAAA7AAYAAAAMAAsAAAA7AAcAAAAMAAsAAAA7AAgAAAAMAAsAAAA7AAkAAAAMAAsAAAA7AAoAAAAMAAsAAAA8AAUAAAAMAAoAAAA8AAYAAAAMAAsAAAA8AAcAAAAMAAsAAAA8AAgAAAAMAAsAAAA8AAkAAAAMAAsAAAA8AAoAAAAMAAsAAADm/wUAAAAMAAoAAADm/wYAAAAMAAsAAADm/wcAAAAMAAsAAADm/wgAAAAMAAsAAADm/wkAAAAMAAsAAADm/woAAAAMAAsAAADl/wUAAAAMAAoAAADl/wYAAAAMAAsAAADl/wcAAAAMAAsAAADl/wgAAAAMAAsAAADl/wkAAAAMAAsAAADl/woAAAAMAAsAAADk/wUAAAAMAAoAAADk/wYAAAAMAAsAAADk/wcAAAAMAAsAAADk/wgAAAAMAAsAAADk/wkAAAAMAAsAAADk/woAAAAMAAsAAADj/wUAAAAMAAoAAADj/wYAAAAMAAsAAADj/wcAAAAMAAsAAADj/wgAAAAMAAsAAADj/wkAAAAMAAsAAADj/woAAAAMAAsAAADi/wUAAAAMAAoAAADi/wYAAAAMAAsAAADi/wcAAAAMAAsAAADi/wgAAAAMAAsAAADi/wkAAAAMAAsAAADi/woAAAAMAAsAAADi/wsAAAAMAAsAAADi/wwAAAAMAAsAAADi/w0AAAAMAAsAAADi/w4AAAAMAAsAAADi/w8AAAAMAAsAAADi/xAAAAAMAAsAAADj/wsAAAAMAAsAAADj/wwAAAAMAAsAAADj/w0AAAAMAAsAAADj/w4AAAAMAAsAAADj/w8AAAAMAAsAAADj/xAAAAAMAAsAAADk/wsAAAAMAAsAAADk/wwAAAAMAAsAAADk/w0AAAAMAAsAAADk/w4AAAAMAAsAAADk/w8AAAAMAAsAAADk/xAAAAAMAAsAAADl/wsAAAAMAAsAAADl/wwAAAAMAAsAAADl/w0AAAAMAAsAAADl/w4AAAAMAAsAAADl/w8AAAAMAAsAAADl/xAAAAAMAAsAAADm/wsAAAAMAAsAAADm/wwAAAAMAAsAAADm/w0AAAAMAAsAAADm/w4AAAAMAAsAAADm/w8AAAAMAAsAAADm/xAAAAAMAAsAAADn/wsAAAAMAAsAAADn/wwAAAAMAAsAAADn/w0AAAAMAAsAAADn/w4AAAAMAAsAAADn/w8AAAAMAAsAAADn/xAAAAAMAAsAAADo/wsAAAAMAAsAAADo/wwAAAAMAAsAAADo/w0AAAAMAAsAAADo/w4AAAAMAAsAAADo/w8AAAAMAAsAAADo/xAAAAAMAAsAAADp/wsAAAAMAAsAAADp/wwAAAAMAAsAAADp/w0AAAAMAAsAAADp/w4AAAAMAAsAAADp/w8AAAAMAAsAAADp/xAAAAAMAAsAAADq/wsAAAAMAAsAAADq/wwAAAAMAAsAAADq/w0AAAAMAAsAAADq/w4AAAAMAAsAAADq/w8AAAAMAAsAAADq/xAAAAAMAAsAAADr/wsAAAAMAAsAAADr/wwAAAAMAAsAAADr/w0AAAAMAAsAAADr/w4AAAAMAAsAAADr/w8AAAAMAAsAAADr/xAAAAAMAAsAAADs/wsAAAAMAAsAAADs/wwAAAAMAAsAAADs/w0AAAAMAAsAAADs/w4AAAAMAAsAAADs/w8AAAAMAAsAAADs/xAAAAAMAAsAAADt/wsAAAAMAAsAAADt/wwAAAAMAAsAAADt/w0AAAAMAAsAAADt/w4AAAAMAAsAAADt/w8AAAAMAAsAAADt/xAAAAAMAAsAAADu/wsAAAAMAAsAAADu/wwAAAAMAAsAAADu/w0AAAAMAAsAAADu/w4AAAAMAAsAAADu/w8AAAAMAAsAAADu/xAAAAAMAAsAAADv/wsAAAAMAAsAAADv/wwAAAAMAAsAAADv/w0AAAAMAAsAAADv/w4AAAAMAAsAAADv/w8AAAAMAAsAAADv/xAAAAAMAAsAAADw/wsAAAAMAAsAAADw/wwAAAAMAAsAAADw/w0AAAAMAAsAAADw/w4AAAAMAAsAAADw/w8AAAAMAAsAAADw/xAAAAAMAAsAAADx/wsAAAAMAAsAAADx/wwAAAAMAAsAAADx/w0AAAAMAAsAAADx/w4AAAAMAAsAAADx/w8AAAAMAAsAAADx/xAAAAAMAAsAAADy/wsAAAAMAAsAAADy/wwAAAAMAAsAAADy/w0AAAAMAAsAAADy/w4AAAAMAAsAAADy/w8AAAAMAAsAAADy/xAAAAAMAAsAAADz/wsAAAAMAAsAAADz/wwAAAAMAAsAAADz/w0AAAAMAAsAAADz/w4AAAAMAAsAAADz/w8AAAAMAAsAAADz/xAAAAAMAAsAAAD0/wsAAAAMAAsAAAD0/wwAAAAMAAsAAAD0/w0AAAAMAAsAAAD0/w4AAAAMAAsAAAD0/w8AAAAMAAsAAAD0/xAAAAAMAAsAAAD1/wsAAAAMAAsAAAD1/wwAAAAMAAsAAAD1/w0AAAAMAAsAAAD1/w4AAAAMAAsAAAD1/w8AAAAMAAsAAAD1/xAAAAAMAAsAAAD2/wsAAAAMAAsAAAD2/wwAAAAMAAsAAAD2/w0AAAAMAAsAAAD2/w4AAAAMAAsAAAD2/w8AAAAMAAsAAAD2/xAAAAAMAAsAAAD3/wsAAAAMAAsAAAD3/wwAAAAMAAsAAAD3/w0AAAAMAAsAAAD3/w4AAAAMAAsAAAD3/w8AAAAMAAsAAAD3/xAAAAAMAAsAAAD4/wsAAAAMAAsAAAD4/wwAAAAMAAsAAAD4/w0AAAAMAAsAAAD4/w4AAAAMAAsAAAD4/w8AAAAMAAsAAAD4/xAAAAAMAAsAAAD5/wsAAAAMAAsAAAD5/wwAAAAMAAsAAAD5/w0AAAAMAAsAAAD5/w4AAAAMAAsAAAD5/w8AAAAMAAsAAAD5/xAAAAAMAAsAAAD6/wsAAAAMAAsAAAD6/wwAAAAMAAsAAAD6/w0AAAAMAAsAAAD6/w4AAAAMAAsAAAD6/w8AAAAMAAsAAAD6/xAAAAAMAAsAAAD7/wsAAAAMAAsAAAD7/wwAAAAMAAsAAAD7/w0AAAAMAAsAAAD7/w4AAAAMAAsAAAD7/w8AAAAMAAsAAAD7/xAAAAAMAAsAAAD8/wsAAAAMAAsAAAD8/wwAAAAMAAsAAAD8/w0AAAAMAAsAAAD8/w4AAAAMAAsAAAD8/w8AAAAMAAsAAAD8/xAAAAAMAAsAAAD9/wsAAAAMAAsAAAD9/wwAAAAMAAsAAAD9/w0AAAAMAAsAAAD9/w4AAAAMAAsAAAD9/w8AAAAMAAsAAAD9/xAAAAAMAAsAAAD+/wsAAAAMAAsAAAD+/wwAAAAMAAsAAAD+/w0AAAAMAAsAAAD+/w4AAAAMAAsAAAD+/w8AAAAMAAsAAAD+/xAAAAAMAAsAAAD//wsAAAAMAAsAAAD//wwAAAAMAAsAAAD//w0AAAAMAAsAAAD//w4AAAAMAAsAAAD//w8AAAAMAAsAAAD//xAAAAAMAAsAAAAAAAsAAAAMAAsAAAAAAAwAAAAMAAsAAAAAAA0AAAAMAAsAAAAAAA4AAAAMAAsAAAAAAA8AAAAMAAsAAAAAABAAAAAMAAsAAAABAAsAAAAMAAsAAAABAAwAAAAMAAsAAAABAA0AAAAMAAsAAAABAA4AAAAMAAsAAAABAA8AAAAMAAsAAAABABAAAAAMAAsAAAACAAsAAAAMAAsAAAACAAwAAAAMAAsAAAACAA0AAAAMAAsAAAACAA4AAAAMAAsAAAACAA8AAAAMAAsAAAACABAAAAAMAAsAAAADAAsAAAAMAAsAAAADAAwAAAAMAAsAAAADAA0AAAAMAAsAAAADAA4AAAAMAAsAAAADAA8AAAAMAAsAAAADABAAAAAMAAsAAAAEAAsAAAAMAAsAAAAEAAwAAAAMAAsAAAAEAA0AAAAMAAsAAAAEAA4AAAAMAAsAAAAEAA8AAAAMAAsAAAAEABAAAAAMAAsAAAAFAAsAAAAMAAsAAAAFAAwAAAAMAAsAAAAFAA0AAAAMAAsAAAAFAA4AAAAMAAsAAAAFAA8AAAAMAAsAAAAFABAAAAAMAAsAAAAGAAsAAAAMAAsAAAAGAAwAAAAMAAsAAAAGAA0AAAAMAAsAAAAGAA4AAAAMAAsAAAAGAA8AAAAMAAsAAAAGABAAAAAMAAsAAAAHAAsAAAAMAAsAAAAHAAwAAAAMAAsAAAAHAA0AAAAMAAsAAAAHAA4AAAAMAAsAAAAHAA8AAAAMAAsAAAAHABAAAAAMAAsAAAAIAAsAAAAMAAsAAAAIAAwAAAAMAAsAAAAIAA0AAAAMAAsAAAAIAA4AAAAMAAsAAAAIAA8AAAAMAAsAAAAIABAAAAAMAAsAAAAJAAsAAAAMAAsAAAAJAAwAAAAMAAsAAAAJAA0AAAAMAAsAAAAJAA4AAAAMAAsAAAAJAA8AAAAMAAsAAAAJABAAAAAMAAsAAAAKAAsAAAAMAAsAAAAKAAwAAAAMAAsAAAAKAA0AAAAMAAsAAAAKAA4AAAAMAAsAAAAKAA8AAAAMAAsAAAAKABAAAAAMAAsAAAALAAsAAAAMAAsAAAALAAwAAAAMAAsAAAALAA0AAAAMAAsAAAALAA4AAAAMAAsAAAALAA8AAAAMAAsAAAALABAAAAAMAAsAAAAMAAsAAAAMAAsAAAAMAAwAAAAMAAsAAAAMAA0AAAAMAAsAAAAMAA4AAAAMAAsAAAAMAA8AAAAMAAsAAAAMABAAAAAMAAsAAAANAAsAAAAMAAsAAAANAAwAAAAMAAsAAAANAA0AAAAMAAsAAAANAA4AAAAMAAsAAAANAA8AAAAMAAsAAAANABAAAAAMAAsAAAAOAAsAAAAMAAsAAAAOAAwAAAAMAAsAAAAOAA0AAAAMAAsAAAAOAA4AAAAMAAsAAAAOAA8AAAAMAAsAAAAOABAAAAAMAAsAAAAPAAsAAAAMAAsAAAAPAAwAAAAMAAsAAAAPAA0AAAAMAAsAAAAPAA4AAAAMAAsAAAAPAA8AAAAMAAsAAAAPABAAAAAMAAsAAAAQAAsAAAAMAAsAAAAQAAwAAAAMAAsAAAAQAA0AAAAMAAsAAAAQAA4AAAAMAAsAAAAQAA8AAAAMAAsAAAAQABAAAAAMAAsAAAARAAsAAAAMAAsAAAARAAwAAAAMAAsAAAARAA0AAAAMAAsAAAARAA4AAAAMAAsAAAARAA8AAAAMAAsAAAARABAAAAAMAAsAAAASAAsAAAAMAAsAAAASAAwAAAAMAAsAAAASAA0AAAAMAAsAAAASAA4AAAAMAAsAAAASAA8AAAAMAAsAAAASABAAAAAMAAsAAAATAAsAAAAMAAsAAAATAAwAAAAMAAsAAAATAA0AAAAMAAsAAAATAA4AAAAMAAsAAAATAA8AAAAMAAsAAAATABAAAAAMAAsAAAAUAAsAAAAMAAsAAAAUAAwAAAAMAAsAAAAUAA0AAAAMAAsAAAAUAA4AAAAMAAsAAAAUAA8AAAAMAAsAAAAUABAAAAAMAAsAAAAVAAsAAAAMAAsAAAAVAAwAAAAMAAsAAAAVAA0AAAAMAAsAAAAVAA4AAAAMAAsAAAAVAA8AAAAMAAsAAAAVABAAAAAMAAsAAAAWAAsAAAAMAAsAAAAWAAwAAAAMAAsAAAAWAA0AAAAMAAsAAAAWAA4AAAAMAAsAAAAWAA8AAAAMAAsAAAAWABAAAAAMAAsAAAAXAAsAAAAMAAsAAAAXAAwAAAAMAAsAAAAXAA0AAAAMAAsAAAAXAA4AAAAMAAsAAAAXAA8AAAAMAAsAAAAXABAAAAAMAAsAAAAYAAsAAAAMAAsAAAAYAAwAAAAMAAsAAAAYAA0AAAAMAAsAAAAYAA4AAAAMAAsAAAAYAA8AAAAMAAsAAAAYABAAAAAMAAsAAAAZAAsAAAAMAAsAAAAZAAwAAAAMAAsAAAAZAA0AAAAMAAsAAAAZAA4AAAAMAAsAAAAZAA8AAAAMAAsAAAAZABAAAAAMAAsAAAAaAAsAAAAMAAsAAAAaAAwAAAAMAAsAAAAaAA0AAAAMAAsAAAAaAA4AAAAMAAsAAAAaAA8AAAAMAAsAAAAaABAAAAAMAAsAAAAbAAsAAAAMAAsAAAAbAAwAAAAMAAsAAAAbAA0AAAAMAAsAAAAbAA4AAAAMAAsAAAAbAA8AAAAMAAsAAAAbABAAAAAMAAsAAAAcAAsAAAAMAAsAAAAcAAwAAAAMAAsAAAAcAA0AAAAMAAsAAAAcAA4AAAAMAAsAAAAcAA8AAAAMAAsAAAAcABAAAAAMAAsAAAAdAAsAAAAMAAsAAAAdAAwAAAAMAAsAAAAdAA0AAAAMAAsAAAAdAA4AAAAMAAsAAAAdAA8AAAAMAAsAAAAdABAAAAAMAAsAAAAeAAsAAAAMAAsAAAAeAAwAAAAMAAsAAAAeAA0AAAAMAAsAAAAeAA4AAAAMAAsAAAAeAA8AAAAMAAsAAAAeABAAAAAMAAsAAAAfAAsAAAAMAAsAAAAfAAwAAAAMAAsAAAAfAA0AAAAMAAsAAAAfAA4AAAAMAAsAAAAfAA8AAAAMAAsAAAAfABAAAAAMAAsAAAAgAAsAAAAMAAsAAAAgAAwAAAAMAAsAAAAgAA0AAAAMAAsAAAAgAA4AAAAMAAsAAAAgAA8AAAAMAAsAAAAgABAAAAAMAAsAAAAhAAsAAAAMAAsAAAAhAAwAAAAMAAsAAAAhAA0AAAAMAAsAAAAhAA4AAAAMAAsAAAAhAA8AAAAMAAsAAAAhABAAAAAMAAsAAAAiAAsAAAAMAAsAAAAiAAwAAAAMAAsAAAAiAA0AAAAMAAsAAAAiAA4AAAAMAAsAAAAiAA8AAAAMAAsAAAAiABAAAAAMAAsAAAAjAAsAAAAMAAsAAAAjAAwAAAAMAAsAAAAjAA0AAAAMAAsAAAAjAA4AAAAMAAsAAAAjAA8AAAAMAAsAAAAjABAAAAAMAAsAAAAkAAsAAAAMAAsAAAAkAAwAAAAMAAsAAAAkAA0AAAAMAAsAAAAkAA4AAAAMAAsAAAAkAA8AAAAMAAsAAAAkABAAAAAMAAsAAAAlAAsAAAAMAAsAAAAlAAwAAAAMAAsAAAAlAA0AAAAMAAsAAAAlAA4AAAAMAAsAAAAlAA8AAAAMAAsAAAAlABAAAAAMAAsAAAAmAAsAAAAMAAsAAAAmAAwAAAAMAAsAAAAmAA0AAAAMAAsAAAAmAA4AAAAMAAsAAAAmAA8AAAAMAAsAAAAmABAAAAAMAAsAAAAnAAsAAAAMAAsAAAAnAAwAAAAMAAsAAAAnAA0AAAAMAAsAAAAnAA4AAAAMAAsAAAAnAA8AAAAMAAsAAAAnABAAAAAMAAsAAAAoAAsAAAAMAAsAAAAoAAwAAAAMAAsAAAAoAA0AAAAMAAsAAAAoAA4AAAAMAAsAAAAoAA8AAAAMAAsAAAAoABAAAAAMAAsAAAApAAsAAAAMAAsAAAApAAwAAAAMAAsAAAApAA0AAAAMAAsAAAApAA4AAAAMAAsAAAApAA8AAAAMAAsAAAApABAAAAAMAAsAAAAqAAsAAAAMAAsAAAAqAAwAAAAMAAsAAAAqAA0AAAAMAAsAAAAqAA4AAAAMAAsAAAAqAA8AAAAMAAsAAAAqABAAAAAMAAsAAAArAAsAAAAMAAsAAAArAAwAAAAMAAsAAAArAA0AAAAMAAsAAAArAA4AAAAMAAsAAAArAA8AAAAMAAsAAAArABAAAAAMAAsAAAAsAAsAAAAMAAsAAAAsAAwAAAAMAAsAAAAsAA0AAAAMAAsAAAAsAA4AAAAMAAsAAAAsAA8AAAAMAAsAAAAsABAAAAAMAAsAAAAtAAsAAAAMAAsAAAAtAAwAAAAMAAsAAAAtAA0AAAAMAAsAAAAtAA4AAAAMAAsAAAAtAA8AAAAMAAsAAAAtABAAAAAMAAsAAAAuAAsAAAAMAAsAAAAuAAwAAAAMAAsAAAAuAA0AAAAMAAsAAAAuAA4AAAAMAAsAAAAuAA8AAAAMAAsAAAAuABAAAAAMAAsAAAAvAAsAAAAMAAsAAAAvAAwAAAAMAAsAAAAvAA0AAAAMAAsAAAAvAA4AAAAMAAsAAAAvAA8AAAAMAAsAAAAvABAAAAAMAAsAAAAwAAsAAAAMAAsAAAAwAAwAAAAMAAsAAAAwAA0AAAAMAAsAAAAwAA4AAAAMAAsAAAAwAA8AAAAMAAsAAAAwABAAAAAMAAsAAAAxAAsAAAAMAAsAAAAxAAwAAAAMAAsAAAAxAA0AAAAMAAsAAAAxAA4AAAAMAAsAAAAxAA8AAAAMAAsAAAAxABAAAAAMAAsAAAAyAAsAAAAMAAsAAAAyAAwAAAAMAAsAAAAyAA0AAAAMAAsAAAAyAA4AAAAMAAsAAAAyAA8AAAAMAAsAAAAyABAAAAAMAAsAAAAzAAsAAAAMAAsAAAAzAAwAAAAMAAsAAAAzAA0AAAAMAAsAAAAzAA4AAAAMAAsAAAAzAA8AAAAMAAsAAAAzABAAAAAMAAsAAAA0AAsAAAAMAAsAAAA0AAwAAAAMAAsAAAA0AA0AAAAMAAsAAAA0AA4AAAAMAAsAAAA0AA8AAAAMAAsAAAA0ABAAAAAMAAsAAAA1AAsAAAAMAAsAAAA1AAwAAAAMAAsAAAA1AA0AAAAMAAsAAAA1AA4AAAAMAAsAAAA1AA8AAAAMAAsAAAA1ABAAAAAMAAsAAAA2AAsAAAAMAAsAAAA2AAwAAAAMAAsAAAA2AA0AAAAMAAsAAAA2AA4AAAAMAAsAAAA2AA8AAAAMAAsAAAA2ABAAAAAMAAsAAAA3AAsAAAAMAAsAAAA3AAwAAAAMAAsAAAA3AA0AAAAMAAsAAAA3AA4AAAAMAAsAAAA3AA8AAAAMAAsAAAA3ABAAAAAMAAsAAAA4AAsAAAAMAAsAAAA4AAwAAAAMAAsAAAA4AA0AAAAMAAsAAAA4AA4AAAAMAAsAAAA4AA8AAAAMAAsAAAA4ABAAAAAMAAsAAAA5AAsAAAAMAAsAAAA5AAwAAAAMAAsAAAA5AA0AAAAMAAsAAAA5AA4AAAAMAAsAAAA5AA8AAAAMAAsAAAA5ABAAAAAMAAsAAAA6AAsAAAAMAAsAAAA6AAwAAAAMAAsAAAA6AA0AAAAMAAsAAAA6AA4AAAAMAAsAAAA6AA8AAAAMAAsAAAA6ABAAAAAMAAsAAAA7AAsAAAAMAAsAAAA7AAwAAAAMAAsAAAA7AA0AAAAMAAsAAAA7AA4AAAAMAAsAAAA7AA8AAAAMAAsAAAA7ABAAAAAMAAsAAAA8AAsAAAAMAAsAAAA8AAwAAAAMAAsAAAA8AA0AAAAMAAsAAAA8AA4AAAAMAAsAAAA8AA8AAAAMAAsAAAA8ABAAAAAMAAsAAAA=")
tile_set = ExtResource("1_g2hva")

[node name="WaterArea" type="Area2D" parent="."]
position = Vector2(0, 70)
collision_layer = 2
input_pickable = false
gravity_space_override = 3
gravity_point_center = Vector2(0, -1)
gravity_direction = Vector2(0, -1)
gravity = 600.0
linear_damp_space_override = 1
linear_damp = 1.0
angular_damp_space_override = 3
angular_damp = 0.0
script = ExtResource("6_w6pv2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterArea"]
shape = SubResource("WorldBoundaryShape2D_ufhjm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GetReadyLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -546.0
offset_top = -102.0
offset_right = 546.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
text = "Get Ready!"
label_settings = SubResource("LabelSettings_46vy5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="CanvasLayer/GetReadyLabel"]
wait_time = 1.5
one_shot = true
autostart = true

[node name="WinOverlay" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.376471)

[node name="WinLabel" type="Label" parent="CanvasLayer/WinOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -546.0
offset_top = -102.0
offset_right = 546.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
text = "Player X
wins!"
label_settings = SubResource("LabelSettings_46vy5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartTimer" type="Timer" parent="CanvasLayer/WinOverlay"]
wait_time = 3.0
one_shot = true

[node name="WinMessageTimer" type="Timer" parent="CanvasLayer/WinOverlay"]
wait_time = 2.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Player1Container" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/Player1Container"]
layout_mode = 2
text = "Player 1"
label_settings = SubResource("LabelSettings_hjutv")

[node name="PlayerStats" parent="CanvasLayer/MarginContainer/Player1Container" instance=ExtResource("7_s5p6o")]
layout_mode = 2

[node name="Player2Container" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/Player2Container"]
layout_mode = 2
text = "Player 2"
label_settings = SubResource("LabelSettings_hjutv")
horizontal_alignment = 2

[node name="PlayerStats" parent="CanvasLayer/MarginContainer/Player2Container" instance=ExtResource("7_s5p6o")]
layout_mode = 2
alignment = 2

[connection signal="ammo_changed" from="Units/Tank1" to="CanvasLayer/MarginContainer/Player1Container/PlayerStats" method="update_ammo_animated"]
[connection signal="armor_changed" from="Units/Tank1" to="CanvasLayer/MarginContainer/Player1Container/PlayerStats" method="update_armor_animated"]
[connection signal="died" from="Units/Tank1" to="." method="_on_tank_1_died"]
[connection signal="ammo_changed" from="Units/Tank2" to="CanvasLayer/MarginContainer/Player2Container/PlayerStats" method="update_ammo_animated"]
[connection signal="armor_changed" from="Units/Tank2" to="CanvasLayer/MarginContainer/Player2Container/PlayerStats" method="update_armor_animated"]
[connection signal="died" from="Units/Tank2" to="." method="_on_tank_2_died"]
[connection signal="body_entered" from="WaterArea" to="WaterArea" method="_on_body_entered"]
[connection signal="timeout" from="CanvasLayer/GetReadyLabel/Timer" to="CanvasLayer/GetReadyLabel" method="hide"]
[connection signal="timeout" from="CanvasLayer/WinOverlay/RestartTimer" to="." method="_on_restart_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/WinOverlay/WinMessageTimer" to="." method="_on_win_message_timer_timeout"]
